--- a/abs_project_ai.ipynb
+++ b/abs_project_ai.ipynb
@@ -50,8 +50,8 @@
    "source": [
     "db = pypyodbc.connect(\n",
     "    'Driver={SQL Server};'\n",
-    "    'Server=DESKTOP-QOHO2CI\\SQLEXPRESS;'\n",
-    "    'Database=absuzmansistem;'\n",
+    "    'Server=pc_server_name'\n",
+    "    'Database=database_name'\n",
     "    'Trusted_Connection=True;'\n",
     ")\n",
     "imlec = db.cursor()\n",
